[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/ui/themes/light.tres" type="Theme" id=1]
[ext_resource path="res://src/Game.gd" type="Script" id=2]
[ext_resource path="res://src/ui/LeftMenu.gd" type="Script" id=3]
[ext_resource path="res://src/WorkBench.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://src/ui/Menu.gd" type="Script" id=6]
[ext_resource path="res://src/ui/menu/gate_AND.png" type="Texture" id=7]
[ext_resource path="res://src/ui/menu/gate_NOR.png" type="Texture" id=8]
[ext_resource path="res://src/ui/menu/gate_OR.png" type="Texture" id=9]
[ext_resource path="res://src/ui/menu/gate_XOR.png" type="Texture" id=10]
[ext_resource path="res://src/ui/menu/gate_NOT.png" type="Texture" id=11]
[ext_resource path="res://src/ui/menu/gate_NAND.png" type="Texture" id=12]
[ext_resource path="res://src/scripts/DragHandler.gd" type="Script" id=13]
[ext_resource path="res://src/ui/menu/io_CLK.png" type="Texture" id=14]
[ext_resource path="res://src/ui/menu/io_BTN.png" type="Texture" id=15]
[ext_resource path="res://src/ui/menu/io_LED.png" type="Texture" id=16]
[ext_resource path="res://src/ui/menu/io_SW.png" type="Texture" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.878431, 0.878431, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.839216, 0.839216, 0.839216, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.921569, 0.921569, 0.921569, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.839216, 0.839216, 0.839216, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.235294 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG2" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 44.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG3" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 50.0
margin_right = 240.0
margin_bottom = -10.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 9.81271
margin_right = -10.0
margin_bottom = -10.1873
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
margin_right = 1004.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/HSplitContainer"]
margin_right = 1004.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="FileButton" type="MenuButton" parent="VSplitContainer/HSplitContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 32.0
shortcut_in_tooltip = false
text = "Файл"
items = [ "Создать", null, 0, false, false, 0, 0, null, "", false, "Открыть", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Сохранить", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, 4, 0, null, "", true, "Выход", null, 0, false, false, 5, 0, null, "", false ]

[node name="EditButton" type="MenuButton" parent="VSplitContainer/HSplitContainer/HBoxContainer"]
visible = false
margin_left = 59.0
margin_right = 123.0
margin_bottom = 32.0
focus_mode = 2
shortcut_in_tooltip = false
text = "Правка"
items = [ "Отменить", null, 0, false, false, 0, 0, null, "", false, "Повторить", null, 0, false, false, 1, 0, null, "", false ]

[node name="HelpButton" type="MenuButton" parent="VSplitContainer/HSplitContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 131.0
margin_bottom = 32.0
focus_mode = 2
shortcut_in_tooltip = false
text = "Справка"
items = [ "Посмотреть справку", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true, "О программе", null, 0, false, false, 2, 0, null, "", false ]

[node name="HSplitContainer2" type="HSplitContainer" parent="VSplitContainer"]
margin_top = 40.0
margin_right = 1004.0
margin_bottom = 580.0
collapsed = true

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/HSplitContainer2"]
margin_right = 228.0
margin_bottom = 540.0
custom_constants/margin_right = 4
custom_constants/margin_top = 0
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0

[node name="Menu" type="VBoxContainer" parent="VSplitContainer/HSplitContainer2/MarginContainer"]
margin_left = 4.0
margin_right = 224.0
margin_bottom = 540.0
rect_min_size = Vector2( 220, 0 )
script = ExtResource( 3 )

[node name="MenuButton" type="Button" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
visible = false
margin_right = 220.0
margin_bottom = 50.0
rect_min_size = Vector2( 192, 50 )
size_flags_vertical = 2
toggle_mode = true
text = "Меню"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogicLabel" type="Label" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
margin_right = 220.0
margin_bottom = 31.0
text = "Логика"

[node name="LogicList" type="ItemList" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
margin_top = 35.0
margin_right = 220.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 145 )
custom_constants/icon_margin = 14
items = [ "AND", ExtResource( 7 ), false, "NAND", ExtResource( 12 ), false, "OR", ExtResource( 9 ), false, "NOR", ExtResource( 8 ), false, "XOR", ExtResource( 10 ), false, "NOT", ExtResource( 11 ), false ]
auto_height = true
max_columns = 2
fixed_column_width = 95
fixed_icon_size = Vector2( 37, 41 )
script = ExtResource( 13 )

[node name="IOLabel" type="Label" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
margin_top = 188.0
margin_right = 220.0
margin_bottom = 219.0
text = "Ввод/Вывод"

[node name="IOList" type="ItemList" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
margin_top = 223.0
margin_right = 220.0
margin_bottom = 325.0
custom_constants/icon_margin = 14
items = [ "CLK", ExtResource( 14 ), false, "LED", ExtResource( 16 ), false, "BTN", ExtResource( 15 ), false, "SW", ExtResource( 17 ), false ]
auto_height = true
max_columns = 2
fixed_column_width = 95
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LegendLabel" type="Label" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
margin_top = 329.0
margin_right = 220.0
margin_bottom = 360.0
text = "Легенда"

[node name="LegendList" type="ItemList" parent="VSplitContainer/HSplitContainer2/MarginContainer/Menu"]
margin_top = 364.0
margin_right = 220.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 170 )
items = [ "Название узла", null, false, "Изображение по ГОСТ", null, false ]
fixed_icon_size = Vector2( 120, 120 )

[node name="WorkBench" type="GraphEdit" parent="VSplitContainer/HSplitContainer2" groups=[
"save",
]]
margin_left = 236.0
margin_right = 1004.0
margin_bottom = 540.0
custom_styles/bg = SubResource( 3 )
right_disconnects = true
scroll_offset = Vector2( -8, -4 )
minimap_enabled = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveButton" type="Button" parent="."]
visible = false
anchor_left = 0.008
anchor_top = 0.013
anchor_right = 0.008
anchor_bottom = 0.08
margin_left = -0.192
margin_top = 0.2
margin_right = 191.808
margin_bottom = -3.8147e-06
rect_min_size = Vector2( 192, 40 )
size_flags_vertical = 3
text = "Сохранить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProjectName" type="LineEdit" parent="."]
visible = false
anchor_left = 0.242
anchor_top = 0.013
anchor_right = 0.758
anchor_bottom = 0.08
margin_left = 0.191986
margin_top = 0.2
margin_right = -0.192017
margin_bottom = -3.8147e-06
rect_min_size = Vector2( 528, 40 )
text = "Untitled"
align = 1
placeholder_text = "Название проекта"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Panel" parent="."]
visible = false
anchor_top = 0.0933333
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserPath" type="LineEdit" parent="Menu"]
anchor_left = 0.25
anchor_top = 0.0294118
anchor_right = 0.749937
anchor_bottom = 0.0885
margin_right = 0.0640259
margin_bottom = -0.143997
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBox" type="HBoxContainer" parent="Menu"]
anchor_left = 0.03125
anchor_top = 0.235294
anchor_right = 0.96875
anchor_bottom = 0.939338
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Projects" type="ScrollContainer" parent="Menu/HBox"]
margin_right = 277.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 4 )

[node name="VBox" type="VBoxContainer" parent="Menu/HBox/Projects"]
margin_right = 277.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Label" type="Label" parent="Menu/HBox/Projects/VBox"]
margin_right = 277.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Проекты"
align = 1

[node name="Modules" type="ScrollContainer" parent="Menu/HBox"]
margin_left = 341.0
margin_right = 618.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 4 )

[node name="VBox" type="VBoxContainer" parent="Menu/HBox/Modules"]
margin_right = 277.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Label" type="Label" parent="Menu/HBox/Modules/VBox"]
margin_right = 277.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Модули"
align = 1

[node name="Gates" type="ScrollContainer" parent="Menu/HBox"]
margin_left = 682.0
margin_right = 960.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 4 )

[node name="VBox" type="VBoxContainer" parent="Menu/HBox/Gates"]
margin_right = 278.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Label" type="Label" parent="Menu/HBox/Gates/VBox"]
margin_right = 278.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Узлы"
align = 1

[node name="Label" type="Label" parent="Menu"]
anchor_left = 0.375
anchor_top = 0.132353
anchor_right = 0.623961
anchor_bottom = 0.191441
margin_right = 0.0639992
margin_bottom = -0.144
text = "CTRL/Shift: не скрывать меню"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AboutDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -111.5
margin_right = 256.0
margin_bottom = 111.5
window_title = "О программе"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="AboutDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AboutDialog/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 215.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="AboutDialog/MarginContainer/VBoxContainer"]
margin_right = 496.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AboutDialog/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 100.0
margin_bottom = 83.0
rect_min_size = Vector2( 100, 75 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="AboutDialog/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 108.0
margin_right = 496.0
margin_bottom = 83.0
text = "LogicGates v1.0
© 2021 Артем Черных
© 2021 КФ ГУМРФ"

[node name="Label" type="Label" parent="AboutDialog/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 496.0
margin_bottom = 144.0
text = "LogicGates - приложение для создания логических схем на базе Godot Engine с открытым исходным кодом."
autowrap = true

[node name="Label2" type="Label" parent="AboutDialog/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 496.0
margin_bottom = 179.0
text = "Данное приложение было разработано специально для КФ ГУМРФ."
autowrap = true

[node name="GridContainer" type="GridContainer" parent="AboutDialog/MarginContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 496.0
margin_bottom = 206.0
custom_constants/hseparation = 33
columns = 2

[node name="GitHub" type="LinkButton" parent="AboutDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 99.0
margin_bottom = 23.0
rect_min_size = Vector2( 50, 0 )
text = "Мы на GitHub"
underline = 1

[node name="KFGUMRF" type="LinkButton" parent="AboutDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 132.0
margin_right = 247.0
margin_bottom = 23.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
text = "Сайт КФ ГУМРФ"
underline = 1

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.0
margin_top = -210.0
margin_right = 338.0
margin_bottom = 210.0
rect_min_size = Vector2( 300, 105 )
window_title = "Open a File"
dialog_text = "Выберите файл который вы хотите открыть"
mode = 0
access = 2
filters = PoolStringArray( "*.tres; Файл логической схемы " )
current_dir = "/Godot Projects/games/LogicGates"
current_path = "/Godot Projects/games/LogicGates/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.5
margin_top = -210.0
margin_right = 337.5
margin_bottom = 210.0
rect_min_size = Vector2( 300, 105 )
window_title = "Сохранить файл"
dialog_text = "Выберите место в которое вы хотите сохранить файл"
access = 2
filters = PoolStringArray( "*.tres; Файл логической схемы " )
current_dir = "/Godot Projects/games/LogicGates"
current_path = "/Godot Projects/games/LogicGates/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -57.5
margin_right = 173.0
margin_bottom = 57.5
rect_min_size = Vector2( 300, 105 )
window_title = "Создать новый файл"
dialog_text = "Вы уверены, что хотите создать новый файл? 
Все несохраненные данные будут потеряны!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -57.5
margin_right = 173.0
margin_bottom = 57.5
rect_min_size = Vector2( 300, 105 )
window_title = "Подтверждение выхода"
dialog_text = "Вы уверены, что хотите выйти?
Все несохраненные данные будут потеряны!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileTypeError" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.0
margin_top = -56.0
margin_right = 313.0
margin_bottom = 56.0
window_title = "Ошибка загрузки"
dialog_text = "Похоже вы пытались загрузить неверный формат файлов проекта!
Пожалуйста убедитесь в том что вы сделали всё правильно и повторите операцию."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpFileError" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -69.0
margin_right = 171.0
margin_bottom = 69.0
window_title = "Ошибка открытия файла справки"
dialog_text = "Похоже вы пытались открыть файл справки,
но он не был найден либо повреждён.
Пожалуйста переустановите программу!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="VSplitContainer/HSplitContainer2/MarginContainer/Menu/MenuButton" to="Menu" method="set_visible"]
[connection signal="item_activated" from="VSplitContainer/HSplitContainer2/MarginContainer/Menu/LogicList" to="VSplitContainer/HSplitContainer2/WorkBench" method="_on_LogicList_item_activated"]
[connection signal="item_selected" from="VSplitContainer/HSplitContainer2/MarginContainer/Menu/LogicList" to="VSplitContainer/HSplitContainer2/WorkBench" method="_on_LogicList_item_selected"]
[connection signal="item_activated" from="VSplitContainer/HSplitContainer2/MarginContainer/Menu/IOList" to="VSplitContainer/HSplitContainer2/WorkBench" method="_on_IOList_item_activated"]
[connection signal="connection_request" from="VSplitContainer/HSplitContainer2/WorkBench" to="VSplitContainer/HSplitContainer2/WorkBench" method="_on_WorkBench_connection_request"]
[connection signal="delete_nodes_request" from="VSplitContainer/HSplitContainer2/WorkBench" to="VSplitContainer/HSplitContainer2/WorkBench" method="_on_WorkBench_delete_nodes_request"]
[connection signal="disconnection_request" from="VSplitContainer/HSplitContainer2/WorkBench" to="VSplitContainer/HSplitContainer2/WorkBench" method="_on_WorkBench_disconnection_request"]
[connection signal="pressed" from="SaveButton" to="." method="save_project"]
[connection signal="pressed" from="AboutDialog/MarginContainer/VBoxContainer/GridContainer/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="AboutDialog/MarginContainer/VBoxContainer/GridContainer/KFGUMRF" to="." method="_on_KFGUMRF_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="confirmed" from="NewDialog" to="." method="_on_NewDialog_confirmed"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_QuitDialog_confirmed"]
